Init commit (slide and articles)

--- a/index.html
+++ b/index.html
@@ -182,8 +182,27 @@
         </article>
       </div>
     </main>
-    <section>
+    <section class="article-insert">
       <!-- add input-->
+      <span>Introduce Article</span>
+      <form>
+        <div class="container-flex tag-title">
+          <input id="tags" class="input-style" type="text" placeholder="Tags" />
+          <input
+            id="title"
+            class="input-style"
+            type="text"
+            placeholder="Title"
+          />
+        </div>
+        <textarea
+          class="input-style"
+          id="decription"
+          type="textarea"
+          placeholder="Description"
+        ></textarea>
+        <button>Save</button>
+      </form>
     </section>
   </body>
   <script type="text/javascript" src="./script.js"></script>
