--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Trending</h1>
+    <h1>Trending Blog</h1>
     <header>
       <!-- slide -->
       <div class="slide container-flex">
